test/sematest/invalid/invalid_cast1.java

class Foo {
  public int a () {
    return 10 >= 20;
  }

  public static void main(String[] args) {

  }
}
